--- a/vignettes/UniChemAPIQueries.Rmd
+++ b/vignettes/UniChemAPIQueries.Rmd
@@ -16,16 +16,17 @@ the retrieval of data in a programmatic fashion. All RESTful queries are constru
 using a base url. There are three types of input data for the UniChem API;
 src_compound_id, src_id and InChIKey. src_id is the source which is represented by
 an Integer. src_compound_id is the compound represented by an identifier for that 
-specific source. We can use the API to map between external databases identifiers,
+specific source [1] . We can use the API to map between external databases identifiers,
 take inchikey as a parameter and map to any identifier, take in chemical id and 
 source id and return the inchi and inchikey structure and  takes in inchikey and
-names of databases and return the appropriate chemical source ids.
+names of databases and return the appropriate chemical source ids. 
 
 ## Mapping Between sources 
 
 Using the UniChem API we can take a Chemical ID which is the identifier for a 
 compound for a specific source and get the Chemical Id for a different source by
-specifying which source we require.
+specifying which source we require. The sources provided by Unichem API are; 
+1. chembl, 2. drugbank, 3. pdb, 4. gtopdb, e.t.c.
 
 `mapBetweenSources` function can be used to achieve this goal on a single Chemical Id, 
 however if we have a list of Chemical Ids for which we can use the 
@@ -36,10 +37,6 @@ however if we have a list of Chemical Ids for which we can use the
 1. For a single Chemical ID
 ```{r eval=FALSE}
 library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 chemicalID <- "CHEMBL12"
 source <- "chembl"
@@ -51,11 +48,6 @@ result <- mapBetweenSources(chemicalID, source, target_source)
 
 2. For a list of Chemical IDs
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 chemicalIDs <- c("CHEMBL12", "CHEMBL11")
 source <- "chembl"
@@ -74,11 +66,6 @@ have multiple InchiKeys we can use the `wInchiToDatabaseID` function.
 
 1. Single Inchikey or Inchi
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 inchi <- "AAKJLRGGTJKAMG-UHFFFAOYSA-N"
 target_name <- "pubchem"
@@ -88,11 +75,6 @@ result <- inchiToDatabaseID(inchi, target_name)
 
 2. Single Inchikey or Inchi with multiple target source names
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 inchi <- "AAKJLRGGTJKAMG-UHFFFAOYSA-N"
 target_names <- c("pubchem", "chembl")
@@ -102,11 +84,6 @@ result <- inchiToDatabaseID(inchi, target_names)
 
 3. Multiple Inchikey or Inchi
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 inchis <- c("AAKJLRGGTJKAMG-UHFFFAOYSA-N", "BCFGMOOMADDAQU-UHFFFAOYSA-N")
 target_names <- c("pubchem", "chembl")
@@ -124,12 +101,6 @@ corresponding src_id we can use `wIdentifierToInchiKey`.
 
 1. Single src_compound_id 
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
 src_compound_id <- "CHEMBL12"
 src_id <- "chembl"
 
@@ -138,14 +109,13 @@ result <- identifierToInchikey(src_compound_id, src_id)
 
 2. Multiple src_compound_ids
 ```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 src_compound_ids <- c("CHEMBL12", "CHEMBL11")
 src_id <- "chembl"
 
 result <- wIdentifierToInchiKey(ve2, target_names = src_id)
 ```
+
+# References
+1. Chambers, J., Davies, M., Gaulton, A. et al. UniChem: a unified chemical structure cross-referencing and identifier tracking system.
+   Cheminform 5, 3 (2013). https://doi.org/10.1186/1758-2946-5-3
