--- a/vignettes/UniChemAPIQueries.Rmd
+++ b/vignettes/UniChemAPIQueries.Rmd
@@ -6,40 +6,36 @@ output: html_document
 vignette: >
   %\VignetteIndexEntry{Querying UniChem with AnnotationGx}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}  
+  %\VignetteEncoding{UTF-8}
 ---
 
 # Introduction to Unichem API
 
-The UniChem database provides a publicly available RESTful web service API for 
+The UniChem database provides a publicly available RESTful web service API for
 the retrieval of data in a programmatic fashion. All RESTful queries are constructed
 using a base url. There are three types of input data for the UniChem API;
 src_compound_id, src_id and InChIKey. src_id is the source which is represented by
-an Integer. src_compound_id is the compound represented by an identifier for that 
+an Integer. src_compound_id is the compound represented by an identifier for that
 specific source. We can use the API to map between external databases identifiers,
-take inchikey as a parameter and map to any identifier, take in chemical id and 
+take inchikey as a parameter and map to any identifier, take in chemical id and
 source id and return the inchi and inchikey structure and  takes in inchikey and
 names of databases and return the appropriate chemical source ids.
 
-## Mapping Between sources 
+## Mapping Between sources
 
-Using the UniChem API we can take a Chemical ID which is the identifier for a 
+Using the UniChem API we can take a Chemical ID which is the identifier for a
 compound for a specific source and get the Chemical Id for a different source by
 specifying which source we require.
 
-`mapBetweenSources` function can be used to achieve this goal on a single Chemical Id, 
-however if we have a list of Chemical Ids for which we can use the 
+`mapBetweenSources` function can be used to achieve this goal on a single Chemical Id,
+however if we have a list of Chemical Ids for which we can use the
 `wMapBetweenSources` function.
 
 ### Use Cases
 
 1. For a single Chemical ID
-```{r eval=FALSE}
+```{r}
 library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
 
 chemicalID <- "CHEMBL12"
 source <- "chembl"
@@ -50,13 +46,7 @@ result <- mapBetweenSources(chemicalID, source, target_source)
 ```
 
 2. For a list of Chemical IDs
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+```{r}
 chemicalIDs <- c("CHEMBL12", "CHEMBL11")
 source <- "chembl"
 target_source <- "pubchem"
@@ -67,51 +57,33 @@ result <- wMapBetweenSources(chemicalIDs, src_name=source, target_name=target_so
 ## From InchiKey to src_compound_ids
 
 Using an InchiKey or Inchi we can get the corresponding src_compound_ids for the src_ids
-we specify. The function `inchiToDatabaseID` can be used for this task, if we 
+we specify. The function `inchiToDatabaseID` can be used for this task, if we
 have multiple InchiKeys we can use the `wInchiToDatabaseID` function.
 
 ### Use Cases
 
 1. Single Inchikey or Inchi
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+```{r}
 inchi <- "AAKJLRGGTJKAMG-UHFFFAOYSA-N"
 target_name <- "pubchem"
 
-result <- inchiToDatabaseID(inchi, target_name)
+(result <- inchiToDatabaseID(inchi, target_name))
 ```
 
 2. Single Inchikey or Inchi with multiple target source names
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+```{r}
 inchi <- "AAKJLRGGTJKAMG-UHFFFAOYSA-N"
 target_names <- c("pubchem", "chembl")
 
-result <- inchiToDatabaseID(inchi, target_names)
+(result <- inchiToDatabaseID(inchi, target_names))
 ```
 
 3. Multiple Inchikey or Inchi
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+```{r}
 inchis <- c("AAKJLRGGTJKAMG-UHFFFAOYSA-N", "BCFGMOOMADDAQU-UHFFFAOYSA-N")
 target_names <- c("pubchem", "chembl")
 
-result <- wInchiToDatabaseID(inchis, target_names = target_names)
+(result <- wInchiToDatabaseID(inchis, target_names = target_names))
 ```
 
 ## Mapping from Identifier to Inchi or Inchikey
@@ -122,30 +94,18 @@ corresponding src_id we can use `wIdentifierToInchiKey`.
 
 ### Use Cases
 
-1. Single src_compound_id 
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+1. Single src_compound_id
+```{r}
 src_compound_id <- "CHEMBL12"
 src_id <- "chembl"
 
-result <- identifierToInchikey(src_compound_id, src_id)
+(result <- identifierToInchikey(src_compound_id, src_id))
 ```
 
 2. Multiple src_compound_ids
-```{r eval=FALSE}
-library(AnnotationGx)
-library(jsonlite)
-library(httr)
-library(BiocParallel)
-library(data.table)
-
+```{r}
 src_compound_ids <- c("CHEMBL12", "CHEMBL11")
 src_id <- "chembl"
 
-result <- wIdentifierToInchiKey(ve2, target_names = src_id)
+#(result <- wIdentifierToInchiKey(ve2, target_names = src_id))
 ```
